--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,9 +126,10 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules    
+    compile "com.facebook.react:react-native:+"  // From node_modules
     compile 'com.airbnb.android:react-native-maps:0.7.1'
 }
 
