--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "15.2.1",
     "react-native": "0.30.0",
     "react-native-maps": "github:lelandrichardson/react-native-maps#master",
+    "react-native-vector-icons": "^2.1.0",
     "react-redux": "4.4.5",
     "redux": "3.5.2",
     "redux-logger": "2.6.1",
