--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "geolib": "^2.0.21",
     "react": "15.2.1",
     "react-native": "0.30.0",
     "react-native-maps": "github:lelandrichardson/react-native-maps#master",
