--- a/package.json
+++ b/package.json
@@ -3,17 +3,27 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "geolib": "^2.0.21",
+    "geolib": "2.0.21",
+    "lodash": "4.16.4",
     "react": "15.2.1",
     "react-native": "0.30.0",
     "react-native-maps": "github:lelandrichardson/react-native-maps#master",
-    "react-native-vector-icons": "^2.1.0",
+    "react-native-vector-icons": "2.1.0",
     "react-redux": "4.4.5",
     "redux": "3.5.2",
     "redux-logger": "2.6.1",
     "redux-thunk": "2.1.0"
+  },
+  "devDependencies": {
+    "eslint": "3.7.1",
+    "eslint-config-airbnb": "12.0.0",
+    "eslint-plugin-import": "1.16.0",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-react": "6.4.1",
+    "eslint-plugin-react-native": "2.0.0"
   }
 }
