--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "babel-eslint": "^7.0.0",
     "geolib": "2.0.21",
     "lodash": "4.16.4",
     "react": "15.2.1",
